<resources>
    <string name="app_name">Not Bored</string>
    <string name="not_bored">NOT BORED</string>
    <string name="participants">Participants</string>
    <string name="start">Start</string>
    <string name="term">Terms and conditions</string>
    <string name="empty_participants">Empty input</string>
    <string name="type_participants">Don\'t numeric input </string>
    <string name="loading">Loading </string>
    <string name="loren"> </string>
    <string name="activity_type">Activity type</string>
    <string name="activity_title">Activity title</string>
    <string name="number_of_participants">number of participants</string>
    <string name="price">Price</string>
    <string name="amount">amount</string>
    <string name="try_another">Try another</string>
    <string name="free">Free</string>
    <string name="low">Low</string>
    <string name="Medium">Medium</string>
    <string name="high">High</string>
    <string name="cant_tell">Can\'t tell</string>
    <string name="activities">Activities</string>
    <string name="accept_terms_and_conditions">Accept?</string>
    <string name="must_accept_terms">You must accept terms and conditions</string>


    0 -> tvAmount.text = "Free"
    1,2,3 -> tvAmount.text = "Low"
    4,5,6 -> tvAmount.text = "Medium"
    7,8,9 -> tvAmount.text = "High"

    else -> tvAmount.text = "Can't tell"


</resources>